gurukul-backend-/k8s/frontend_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: gurukul-staging
spec:
  replicas: 1
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: frontend
  
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: bhiv/frontend:new
        imagePullPolicy: Always
        ports:
        - containerPort: 5173

        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

        readinessProbe:
          httpGet:
            path: /
            port: 5173
          initialDelaySeconds: 5
          periodSeconds: 5
        
        livenessProbe:
          httpGet:
            path: /
            port: 5173
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 15
          failureThreshold: 5
