gurukul-backend-/k8s/mongo_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: gurukul-staging
spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongo

  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:7
        ports:
        - containerPort: 27017
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        volumeMounts:
          - mountPath: /data/db
            name: mongo-storage
        readinessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 15
          failureThreshold: 5
        livenessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 15
          failureThreshold: 5
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
              claimName: mongo-pvc
