gurukul-backend-/k8s/postgres_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: gurukul-staging
spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres 
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
      
        readinessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 15
          failureThreshold: 5

        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
