gurukul-backend-/k8s/redis_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: gurukul-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "100m"
            memory: "256Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: gurukul-staging
spec:
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
