gurukul-backend-/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gurukul-ingress
  namespace: gurukul-staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: testing.gurukul.local   # Access via this dummy URL
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: gurukul-backend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
