gurukul-backend-/k8s/ingress_high_priority.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress-high
  namespace: gurukul-staging
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "100"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "50"
    nginx.ingress.kubernetes.io/limit-status-code: "429"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      limit_req_status 429;
spec:
  rules:
  - host: high.gurukul.local
    http:
      paths:
      - path: /api/v1/auth
        pathType: Prefix
        backend:
          service:
            name: gurukul-backend
            port:
              number: 80
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: gurukul-backend
            port:
              number: 80
